# goit-web-hw-08

./: pyproject.toml
first_part/: main.py  models.py  seed.py
second_part/: consumer.py  models.py  producer.py
