[tool.poetry]
name = "goit-web-hw-08"
version = "0.1.0"
description = ""
authors = ["Mizhik <vlad.smilono2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.28.2"
redis = "^5.0.4"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
